[gd_scene load_steps=47 format=3 uid="uid://dnkooekb50pwf"]

[ext_resource type="Script" uid="uid://bpxnjsvgxutqt" path="res://Items/Enemies/Chomper/Chomper.gd" id="1_5pru2"]
[ext_resource type="Shader" uid="uid://cbxct24ys224x" path="res://flash_shader.gdshader" id="2_60lsx"]
[ext_resource type="Texture2D" uid="uid://f5b3bglym51m" path="res://Items/Enemies/Chomper/attack/attack.png" id="3_5pru2"]
[ext_resource type="Texture2D" uid="uid://dcdydk0qpjhas" path="res://Items/Enemies/Chomper/death/death.png" id="4_6xkvw"]
[ext_resource type="Texture2D" uid="uid://cwuq5tq0t58ud" path="res://Items/Enemies/Chomper/spawn/spawn.png" id="6_c2uoy"]
[ext_resource type="Texture2D" uid="uid://b8klqhd1m6t8m" path="res://Items/Enemies/Enemy HealthBar/sprite-1-26.png" id="7_mngnx"]
[ext_resource type="Texture2D" uid="uid://ba77j2m3pkroo" path="res://Items/Enemies/Chomper/walk/walk/sprite_0.png" id="7_yhjir"]
[ext_resource type="Texture2D" uid="uid://b4nkqjow6k7il" path="res://Items/Enemies/Chomper/walk/walk/sprite_1.png" id="8_3ccss"]
[ext_resource type="Texture2D" uid="uid://devtmiw62na0g" path="res://Items/Enemies/Enemy HealthBar/sprite-1-20.png" id="8_kdh1f"]
[ext_resource type="Texture2D" uid="uid://b2wuldt6nasiv" path="res://Items/Enemies/Chomper/walk/walk/sprite_2.png" id="9_qrspq"]
[ext_resource type="Texture2D" uid="uid://bdrtg1edecmv" path="res://Items/Enemies/Chomper/walk/walk/sprite_3.png" id="10_4d1sw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6do27"]
shader = ExtResource("2_60lsx")
shader_parameter/flash_strength = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_c2uoy"]
atlas = ExtResource("3_5pru2")
region = Rect2(0, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfg03"]
atlas = ExtResource("3_5pru2")
region = Rect2(2048, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xkvw"]
atlas = ExtResource("3_5pru2")
region = Rect2(0, 2048, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhjir"]
atlas = ExtResource("3_5pru2")
region = Rect2(2048, 2048, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ccss"]
atlas = ExtResource("3_5pru2")
region = Rect2(0, 4096, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrspq"]
atlas = ExtResource("3_5pru2")
region = Rect2(2048, 4096, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ke5h"]
atlas = ExtResource("4_6xkvw")
region = Rect2(768, 0, 768, 768)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2q6i"]
atlas = ExtResource("4_6xkvw")
region = Rect2(1536, 0, 768, 768)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hxdf"]
atlas = ExtResource("4_6xkvw")
region = Rect2(2304, 0, 768, 768)

[sub_resource type="AtlasTexture" id="AtlasTexture_37cv4"]
atlas = ExtResource("4_6xkvw")
region = Rect2(0, 768, 768, 768)

[sub_resource type="AtlasTexture" id="AtlasTexture_n15gq"]
atlas = ExtResource("4_6xkvw")
region = Rect2(768, 768, 768, 768)

[sub_resource type="AtlasTexture" id="AtlasTexture_wv5in"]
atlas = ExtResource("4_6xkvw")
region = Rect2(1536, 768, 768, 768)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwq4e"]
atlas = ExtResource("4_6xkvw")
region = Rect2(2304, 768, 768, 768)

[sub_resource type="AtlasTexture" id="AtlasTexture_1o5c6"]
atlas = ExtResource("4_6xkvw")
region = Rect2(0, 1536, 768, 768)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtov3"]
atlas = ExtResource("4_6xkvw")
region = Rect2(768, 1536, 768, 768)

[sub_resource type="AtlasTexture" id="AtlasTexture_250qa"]
atlas = ExtResource("4_6xkvw")
region = Rect2(1536, 1536, 768, 768)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j2vy"]
atlas = ExtResource("4_6xkvw")
region = Rect2(2304, 1536, 768, 768)

[sub_resource type="AtlasTexture" id="AtlasTexture_63ylo"]
atlas = ExtResource("4_6xkvw")
region = Rect2(0, 2304, 768, 768)

[sub_resource type="AtlasTexture" id="AtlasTexture_odpba"]
atlas = ExtResource("4_6xkvw")
region = Rect2(768, 2304, 768, 768)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6a1e"]
atlas = ExtResource("4_6xkvw")
region = Rect2(1536, 2304, 768, 768)

[sub_resource type="AtlasTexture" id="AtlasTexture_cuv6l"]
atlas = ExtResource("4_6xkvw")
region = Rect2(2304, 2304, 768, 768)

[sub_resource type="AtlasTexture" id="AtlasTexture_4d1sw"]
atlas = ExtResource("6_c2uoy")
region = Rect2(0, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_63euj"]
atlas = ExtResource("6_c2uoy")
region = Rect2(2048, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_uauiq"]
atlas = ExtResource("6_c2uoy")
region = Rect2(4096, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_87ayr"]
atlas = ExtResource("6_c2uoy")
region = Rect2(0, 2048, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_yq8h8"]
atlas = ExtResource("6_c2uoy")
region = Rect2(2048, 2048, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_62jn4"]
atlas = ExtResource("6_c2uoy")
region = Rect2(4096, 2048, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgkpl"]
atlas = ExtResource("6_c2uoy")
region = Rect2(0, 4096, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_i58i6"]
atlas = ExtResource("6_c2uoy")
region = Rect2(2048, 4096, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_7apsm"]
atlas = ExtResource("6_c2uoy")
region = Rect2(4096, 4096, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dhds"]
atlas = ExtResource("6_c2uoy")
region = Rect2(0, 6144, 2048, 2048)

[sub_resource type="SpriteFrames" id="SpriteFrames_j4qr3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2uoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfg03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xkvw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhjir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ccss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrspq")
}],
"loop": false,
"name": &"attack",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ke5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2q6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hxdf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37cv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n15gq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wv5in")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwq4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1o5c6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtov3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_250qa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j2vy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63ylo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odpba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6a1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuv6l")
}],
"loop": false,
"name": &"death",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4d1sw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63euj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uauiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87ayr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yq8h8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62jn4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgkpl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i58i6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7apsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dhds")
}],
"loop": false,
"name": &"spawn",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_yhjir")
}, {
"duration": 1.0,
"texture": ExtResource("8_3ccss")
}, {
"duration": 1.0,
"texture": ExtResource("9_qrspq")
}, {
"duration": 1.0,
"texture": ExtResource("10_4d1sw")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s7bn3"]
size = Vector2(21, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2hac7"]
size = Vector2(29, 35)

[node name="Chomper" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
script = ExtResource("1_5pru2")

[node name="SpriteRoot" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="SpriteRoot"]
texture_filter = 1
material = SubResource("ShaderMaterial_6do27")
sprite_frames = SubResource("SpriteFrames_j4qr3")
animation = &"death"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 4.5)
shape = SubResource("RectangleShape2D_s7bn3")

[node name="HealthBar" type="Node2D" parent="."]

[node name="TextureBar" type="TextureProgressBar" parent="HealthBar"]
texture_filter = 1
offset_left = -19.0
offset_top = 21.0
offset_right = 21.0
offset_bottom = 26.0
max_value = 30.0
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 3
texture_under = ExtResource("7_mngnx")
texture_progress = ExtResource("8_kdh1f")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(-0.5, 4.5)
shape = SubResource("RectangleShape2D_2hac7")

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
